--- a/praticas.html
+++ b/praticas.html
@@ -351,8 +351,7 @@
             <p><strong>2 - </strong>A ferramenta de alinhamento BWA gera saídas no formato SAM. No entanto, para as etapas subsequentes da análise, é necessária a conversão desses arquivos para o formato BAM. Para isso, execute o seguinte comando:</p>
             <div class="code-container">
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
-              <pre><code>
-            # Converter o arquivo SAM para BAM
+              <pre><code># Converter o arquivo SAM para BAM
             samtools view -Sb [/CAMINHO/AMOSTRA/SAM/amostra.sam] > [/CAMINHO/PARA/ARQUIVO/SAIDA/amostra.bam]
 
             # Ordenar o arquivo BAM
@@ -455,6 +454,7 @@
   </script>
 </body>
 </html>
+
 
 
 
