--- a/praticas.html
+++ b/praticas.html
@@ -351,11 +351,11 @@
             <p><strong>2 - </strong>A ferramenta de alinhamento BWA gera saídas no formato SAM. No entanto, para as etapas subsequentes da análise, é necessária a conversão desses arquivos para o formato BAM. Para isso, execute o seguinte comando:</p>
             <div class="code-container">
               <button class="copy-btn" onclick="copyCode(this)">📋</button>
-              <pre><code><p># Converter o arquivo SAM para BAM</p>
-<span class="cmd">samtools view -Sb [/CAMINHO/AMOSTRA/SAM/amostra.sam] > [/CAMINHO/PARA/ARQUIVO/SAIDA/amostra.bam]</span>
-<p># Ordenar o arquivo BAM</p>
-<span class="cmd">samtools sort -@ 24 -o [/CAMINHO/PARA/OUTPUTS/amostra.sorted.bam] [/CAMINHO/PARA/OS/ARQUIVOS/GERADOS/ANTERIORMENTE/amostra.bam]</span>
-</code></pre>
+              <pre><p># Converter o arquivo SAM para BAM</p>
+              <code>samtools view -Sb [/CAMINHO/AMOSTRA/SAM/amostra.sam] > [/CAMINHO/PARA/ARQUIVO/SAIDA/amostra.bam]</code>
+              <p># Ordenar o arquivo BAM</p>
+              <code">samtools sort -@ 24 -o [/CAMINHO/PARA/OUTPUTS/amostra.sorted.bam] [/CAMINHO/PARA/OS/ARQUIVOS/GERADOS/ANTERIORMENTE/amostra.bam]</code>
+              </pre>
             </div>
 
             <script>
@@ -406,14 +406,7 @@
 <span class="keyword">done</span>
 </code></pre>
         </div>
-        
-        <div class="instructions">
-            <h2>Como Usar</h2>
-            <p><strong>1. Configure as Variáveis:</strong> Edite a seção de configuração no topo do script para apontar para os diretórios e arquivos corretos do seu projeto.</p>
-            <p><strong>2. Salve o Script:</strong> Copie o código e salve-o em um arquivo com a extensão <code>.sh</code> (ex: <code>run_picard.sh</code>).</p>
-            <p><strong>3. Dê Permissão de Execução:</strong> No seu terminal, torne o script executável com: <br><code>chmod +x run_picard.sh</code></p>
-            <p><strong>4. Execute:</strong> Rode o script no terminal com: <br><code>./run_picard.sh</code></p>
-        </div>
+        <p><strong>💡 Importante:</strong> Configure as Variáveis: Edite a seção de configuração no topo do script para apontar para os diretórios e arquivos corretos do seu projeto.</p>
 
             <script>
               function copyCode(button) {
@@ -603,6 +596,7 @@ echo "Processo de recalibração finalizado com sucesso!"
   </script>
 </body>
 </html>
+
 
 
 
