--- a/praticas.html
+++ b/praticas.html
@@ -404,7 +404,7 @@
 <span class="keyword">done</span>
 </code></pre>
         </div><br>
-        <p><strong>💡 Importante:</strong> Configure as Variáveis: Edite a seção de configuração no topo do script para apontar para os diretórios e arquivos corretos do seu projeto.</p>
+        <p><strong>💡 Importante!</strong> Configure as variáveis: edite a seção de configuração no topo do script para apontar para os diretórios e arquivos corretos do seu projeto.</p>
 
             <script>
               function copyCode(button) {
@@ -584,6 +584,7 @@ echo "Processo de recalibração finalizado com sucesso!"
   </script>
 </body>
 </html>
+
 
 
 
