--- a/referencia.html
+++ b/referencia.html
@@ -53,6 +53,79 @@
     
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Referências</h1>
+       <ul>
+      <li>
+        <a href="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/" target="_blank">FASTQC</a> — 
+        ANDREWS, S. <strong>FastQC: a quality control tool for high throughput sequence data.</strong> Babraham Bioinformatics, 2010. 
+        Disponível em: &lt;https://www.bioinformatics.babraham.ac.uk/projects/fastqc/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="https://multiqc.info" target="_blank">MULTIQC</a> — 
+        EWELS, P.; MAGNUSSON, M.; LUNDIN, S.; KÄLLER, M. <strong>MultiQC: summarize analysis results for multiple tools and samples in a single report.</strong> 
+        Bioinformatics, 2016. Disponível em: &lt;https://multiqc.info&gt;. Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="https://www.bioinformatics.babraham.ac.uk/projects/trim_galore/" target="_blank">TRIM GALORE!</a> — 
+        KRUEGER, F. <strong>Trim Galore! Wrapper tool around Cutadapt and FastQC to consistently apply quality and adapter trimming.</strong> 
+        Babraham Bioinformatics, 2012. Disponível em: &lt;https://www.bioinformatics.babraham.ac.uk/projects/trim_galore/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="http://bio-bwa.sourceforge.net/" target="_blank">BWA-MEM</a> — 
+        LI, H. <strong>Aligning sequence reads, clone sequences and assembly contigs with BWA-MEM.</strong> 
+        arXiv preprint arXiv:1303.3997, 2013. Disponível em: &lt;https://arxiv.org/abs/1303.3997&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="https://gatk.broadinstitute.org/" target="_blank">GATK (Genome Analysis Toolkit)</a> — 
+        MCKENNA, A.; HANNA, M.; BANKS, E.; et al. <strong>The Genome Analysis Toolkit: a MapReduce framework for analyzing next-generation DNA sequencing data.</strong> 
+        Genome Research, 2010. Disponível em: &lt;https://gatk.broadinstitute.org/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="https://broadinstitute.github.io/picard/" target="_blank">PICARD</a> — 
+        BROAD INSTITUTE. <strong>Picard Toolkit.</strong> Broad Institute, 2019. 
+        Disponível em: &lt;https://broadinstitute.github.io/picard/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="http://pcingola.github.io/SnpEff/" target="_blank">SNPEFF</a> — 
+        CINGOLANI, P.; PLATTS, A.; WANG, L. L.; COON, M.; NGUYEN, T.; LAND, S. J.; LU, X.; RUDEN, D. M. 
+        <strong>SnpEff: a program for annotating and predicting the effects of single nucleotide polymorphisms.</strong> 
+        Fly (Austin), 2012. Disponível em: &lt;http://pcingola.github.io/SnpEff/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="http://pcingola.github.io/SnpEff/" target="_blank">SNPSIFT</a> — 
+        CINGOLANI, P.; PATEL, V. M.; COON, M.; NGUYEN, T.; LAND, S. J.; RUDEN, D. M.; LU, X. 
+        <strong>SnpSift: a tool for filtering and manipulating VCF files.</strong> 
+        Frontiers in Genetics, 2012. Disponível em: &lt;http://pcingola.github.io/SnpEff/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="https://www.r-project.org/" target="_blank">R</a> — 
+        R CORE TEAM. <strong>R: A language and environment for statistical computing.</strong> 
+        Vienna: R Foundation for Statistical Computing, 2023. Disponível em: &lt;https://www.R-project.org/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+
+      <li>
+        <a href="https://bioconductor.org/packages/maftools/" target="_blank">MAFTOOLS</a> — 
+        MAYAKONDA, A.; LIN, D. C.; ASSENOV, Y.; PLASS, C.; KOEFFLER, H. P. 
+        <strong>Maftools: efficient and comprehensive analysis of somatic variants in cancer.</strong> 
+        Genome Research, 2018. Disponível em: &lt;https://bioconductor.org/packages/maftools/&gt;. 
+        Acesso em: 15 out. 2025.
+      </li>
+    </ul>
     <h4 class="fw-bold mb-4">Ferramentas:</h4>
     <ul>
       <li><a href="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/">FastQC</a></li>
@@ -78,4 +151,5 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
 
