--- a/referencia.html
+++ b/referencia.html
@@ -127,14 +127,25 @@
       </li>
     </ul>
     
-    <h4 class="fw-bold mb-4">Bancos de Dados:</h4>
-    <ul>
-      <li><a href="https://www.ncbi.nlm.nih.gov/">NCBI</a></li>
-      <li><a href="https://www.ensembl.org/index.html">ENSEMBL</a></li>
-      <li><a href="https://genome.ucsc.edu/">UCSC Genome Browser</a></li>
-      <li><a href="https://portal.gdc.cancer.gov/">TCGA</a></li>
-      <li><a href="https://www.ncbi.nlm.nih.gov/geo/">GEO</a></li>
-    </ul>
+<h4 class="fw-bold mb-4">Bancos de Dados:</h4>
+<ul>
+  <li>
+    <a href="https://www.ncbi.nlm.nih.gov/">NCBI</a> — reúne dados genéticos, proteicos e literários, incluindo GenBank e SRA.
+  </li>
+  <li>
+    <a href="https://www.ensembl.org/index.html">ENSEMBL</a> — fornece anotações genômicas detalhadas e comparativas entre espécies.
+  </li>
+  <li>
+    <a href="https://genome.ucsc.edu/">UCSC Genome Browser</a> — permite visualizar genomas e suas anotações de forma interativa.
+  </li>
+  <li>
+    <a href="https://portal.gdc.cancer.gov/">TCGA</a> — disponibiliza dados genômicos e clínicos de diversos tipos de câncer.
+  </li>
+  <li>
+    <a href="https://www.ncbi.nlm.nih.gov/geo/">GEO</a> — armazena dados públicos de expressão gênica e experimentos funcionais (RNA-seq, microarray).
+  </li>
+</ul>
+
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -142,6 +153,7 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
 
 
 
