--- a/praticas.html
+++ b/praticas.html
@@ -485,6 +485,7 @@ echo "Iniciando a etapa 2: ApplyBQSR..."
 
 echo "Processo de recalibração finalizado com sucesso!"
 </code></pre><br>
+          </div>
             <p><strong>💡 Importante!</strong> Configure as variáveis: edite a seção de configuração no topo do script para apontar para os diretórios e arquivos corretos do seu projeto.</p>
 
             <script>
@@ -654,6 +655,7 @@ echo "Processo de recalibração finalizado com sucesso!"
   </script>
 </body>
 </html>
+
 
 
 
