--- a/praticas.html
+++ b/praticas.html
@@ -727,8 +727,9 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
 <span class="comment"># Por padrão, a função plota os 20 genes mais mutados</span>
 <span class="function">oncoplot</span>(<span class="parameter">maf</span> = laml, <span class="parameter">draw_titv</span> = TRUE)
 </code></pre>
-            </code></pre>
-          </div>
+          </div><br>
+          <p><strong>💡 Dica:</strong> Consulte a documentação da pacote para conhecer os tipos de gráficos disponíveis e as opções de personalização.</p>
+
         </div>
       </div>
     </div>
@@ -751,6 +752,7 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
   </script>
 </body>
 </html>
+
 
 
 
