--- a/praticas.html
+++ b/praticas.html
@@ -685,7 +685,7 @@ echo "Processo de recalibração finalizado com sucesso!"
                 });
               }
             </script><br>
-          <p><strong>2 - </strong>Após realizar a anotação, devemos separar as amostras em arquivos separados.Para isso, execute o script a seguir:</p>
+          <p><strong>2 - </strong>Após realizar a anotação, devemos separar as amostras em arquivos separados. Para isso, execute o script a seguir:</p>
           <div class="code-container">
           <button class="copy-btn" onclick="copyCode(this)">📋</button>
           <pre><code>
@@ -726,6 +726,8 @@ echo "Processo de recalibração finalizado com sucesso!"
 
 <span class="keyword">echo</span> <span class="string">"✅ Processo concluído! Os VCFs individuais foram salvos em: $OUTPUT_DIR"</span>
           </code></pre>
+          </div>
+            
            <script>
               function copyCode(button) {
                 const code = button.nextElementSibling.innerText;
@@ -875,7 +877,7 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
 <span class="function">oncoplot</span>(<span class="parameter">maf</span> = laml, <span class="parameter">draw_titv</span> = TRUE)
 </code></pre>
           </div><br>
-          <p><strong>💡 Dica:</strong> Consulte a documentação da pacote para conhecer os tipos de gráficos disponíveis e as opções de personalização.</p>
+          <p><strong>💡 Dica:</strong> Consulte a documentação do pacote para conhecer os tipos de gráficos disponíveis e as opções de personalização.</p>
             <script>
               function copyCode(button) {
                 const code = button.nextElementSibling.innerText;
@@ -908,6 +910,7 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
   </script>
 </body>
 </html>
+
 
 
 
