--- a/praticas.html
+++ b/praticas.html
@@ -852,7 +852,7 @@ echo <span class="string">"Conversão concluída!"</span>
             <p><strong>Objetivo:</strong> Realizar análises com os dados processados.</p><br>
             <p><strong>Tarefa:</strong> Explore o software <strong>R</strong> e seus pacotes para realizar análises com os dados. Por exemplo, o pacote <a href="https://www.bioconductor.org/packages/release/bioc/html/maftools.html" target="_blank" rel="noopener"> maftools</a>
 permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/maftools/inst/doc/oncoplots.html"> <strong>oncoplots</strong></a> e outras visualizações genômicas.</p>
-            <p><strong>Agora utilize o software R!!</strong></p>
+            <p><strong>⚠️ Agora utilize o software R!!</strong></p>
             <div class="code-container">
             <button class="copy-btn" onclick="copyCode(this)">📋</button>
             <pre><code>
@@ -910,6 +910,7 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
   </script>
 </body>
 </html>
+
 
 
 
