--- a/praticas.html
+++ b/praticas.html
@@ -738,7 +738,7 @@ echo "Processo de recalibração finalizado com sucesso!"
               }
             </script><br>
             
-          <p><strong>3 - </strong>Agora, temos um arquivo vcf anotado, com todas as informações para fazermos as análises. Porém alguns pacotes necessitam de formatos diferentes de arquivo, como o maftools. Caso você queira utilizar esse pacote, execute o script a seguir ainda no terminal do servidor:</p>
+          <p><strong>3 - </strong>Agora, temos os arquivos vcf anotados, com todas as informações para fazermos as análises. Porém alguns pacotes necessitam de formatos diferentes de arquivo, como o maftools. Caso você queira utilizar esse pacote, execute o script a seguir ainda no terminal do servidor:</p>
           <div class="code-container">
           <button class="copy-btn" onclick="copyCode(this)">📋</button>
           <pre><code>
@@ -910,6 +910,7 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
   </script>
 </body>
 </html>
+
 
 
 
