--- a/praticas.html
+++ b/praticas.html
@@ -142,8 +142,9 @@
         </h2>
         <div id="collapseAtividade0" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
-            <p><strong>O que é ambiente conda?</strong></p>
+<p><strong>O que é ambiente conda?</strong></p>
             <li> Um ambiente Conda é um espaço isolado dentro do gerenciador de pacotes Conda (usado no Anaconda ou Miniconda) que permite instalar e gerenciar versões específicas de pacotes, bibliotecas e dependências sem interferir em outros projetos.</li>
+            <li> Uma boa prática é utilizar um ambiente conda para cada etapa no processamento dos dados.</li>
             <p><strong>Como usar?</strong></p><br><br>
     <p><strong>1. Instalar Conda</strong></p>
   <ul>
@@ -183,6 +184,7 @@
   </ul>
 
   <p><strong>4. Instalar pacotes</strong></p>
+  <p>⚠️ Nesta etapa, pesquise no Google o nome da ferramenta necessária seguido de <code>conda install</code> para cada atividade. Exemplo: <code>fastqc conda install</code>. Dessa forma, você descobrirá como instalar a ferramenta via Conda, incluindo todas as dependências necessárias.</p>
   <ul>
     <li>Instalar pacotes dentro do ambiente ativo:
       <div class="code-container">
@@ -859,6 +861,7 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
   </script>
 </body>
 </html>
+
 
 
 
