--- a/praticas.html
+++ b/praticas.html
@@ -142,10 +142,12 @@
         </h2>
         <div id="collapseAtividade0" class="accordion-collapse collapse" data-bs-parent="#accordionAtividades">
           <div class="accordion-body">
-            <h3>O que é ambiente conda?</h3>
-            <li> Um ambiente Conda é um espaço isolado dentro do gerenciador de pacotes Conda (usado no Anaconda ou Miniconda) que permite instalar e gerenciar versões específicas de pacotes, bibliotecas e dependências sem interferir em outros projetos.</li>
-            <li> Uma boa prática é utilizar um ambiente conda para cada etapa no processamento dos dados.</li><br>
-            <h3>Como usar?</h3>
+            <p><strong>O que é ambiente conda?</strong></p>
+            <ul>
+              <li> Um ambiente Conda é um espaço isolado dentro do gerenciador de pacotes Conda (usado no Anaconda ou Miniconda) que permite instalar e gerenciar versões específicas de pacotes, bibliotecas e dependências sem interferir em outros projetos.</li>
+              <li> Uma boa prática é utilizar um ambiente conda para cada etapa no processamento dos dados.</li>
+            </ul>
+            <p><strong>Como usar?</strong></p>
             <p><strong>1. Instalar Conda</strong></p>
             <ul>
               <li>Baixar e instalar <strong>Anaconda</strong> (completo) ou <strong>Miniconda</strong> (mais leve).</li>
@@ -863,6 +865,7 @@ permite gerar <a href="https://bioconductor.org/packages/release/bioc/vignettes/
   </script>
 </body>
 </html>
+
 
 
 
